[tool.poetry]
name = "sequential-test"
version = "0.1.0"
description = ""
authors = ["Roberto Abdelkader Martínez Pérez <robertomartinezp@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{include = "sequential_test", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
numpy = "^1.26.1"
scipy = "^1.11.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
